[package]
name = "comics"
version = "0.1.0"
authors = ["Evan Stoll <evanjsx@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.0", features = [ "yaml" ] }
diesel = { version = "1.4.3", features = [ "sqlite" ] }
env_logger = "0.7.1"
reqwest = "0.9.22"
serde_json = "1.0.41"
serde = { version = "1.0.101", features = [ "derive" ] }
tracing = { version = "0.1.10", features = [ "log" ] }
url = { version = "2.1.0", features = [ "serde" ] }
failure = "0.1.6"
chrono = {version = "0.4.9", features = [ "serde" ]}
envy = "0.4.0"
dotenv = "0.15.0"
error-chain = "0.12.1"
serde_derive = "1.0.101"
